--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@perseverancia/configuration": "*",
 		"@perseverancia/env": "*",
 		"@perseverancia/rest-api": "*",
+		"ejs": "^3.1.10",
 		"express": "^5.1.0"
 	},
 	"devDependencies": {
